--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -7,6 +7,7 @@ html
         meta(name="MobileOptimized", content="320")
         meta(name="viewport", content="width=device-width, initial-scale=1, minimal-ui")
         meta(http-equiv="cleartype", content="on")
+        link(href="http://fonts.googleapis.com/css?family=Cousine:400,700,400italic,700italic", rel="stylesheet", type="text/css")
         title
             block title
                 | Airframe
