--- a/src/templates/layouts/default.jade
+++ b/src/templates/layouts/default.jade
@@ -11,7 +11,7 @@ html
         title
             block title
                 | Airframe
-        link(rel="stylesheet", href="/css/main.css")
+        link(rel="stylesheet", href="css/main.css")
         block head
           //- Additional head content (scripts, styles.
 
@@ -19,6 +19,6 @@ body
     block content
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-    script(src="/js/bundle.js")
+    script(src="js/bundle.js")
     block scripts
       //- Additional scripts.
