--- a/src/templates/views/index.jade
+++ b/src/templates/views/index.jade
@@ -31,8 +31,8 @@ block content
             .tweet--status
                 .tweet--chars -
                 |  characters
-        a(href="#")#copy-button.input--submit Compile &amp; Copy
-        a(href="#")#reset-button.input--reset Clear &amp; Reset
+        span#copy-button.input--submit Compile &amp; Copy
+        span#reset-button.input--reset Clear &amp; Reset
 
         .result
             table.result--table
